css/index.css
/*  From Building-Blocks    */
html, body {
    margin: 0;
    padding: 0;
    font-size: 10px; 
    background-color: #fff;
    height: 100%;
    overflow-x: hidden;
}

section[role="region"] {
    height: 100%;
    line-height: 1em;
    font-size: 2.2rem;
}

div[role="main"] {
    background: #fff;
    height: calc(100% - 5rem);
    overflow: hidden;
}

/*  Custom CSS  */
section[role="region"]:not(#drawer) {
    transition: none 0s ease 0s;
}

section.inactive-view {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    transform: translateX(100%);
}

section.inactive-view.to-left {
    animation: right-to-current 0.4s forwards;
    display: block;
}

section.inactive-view.to-right {
    animation: current-to-right 0.4s forwards;
}

#index {
    height: 100%;
}

.flickr-photos img {
    float: left;
    margin: 0;
    padding: 0;
    width: calc(100% / 3);
}

@media (orientation: landscape) {
    .flickr-photos img {
        width: calc(100% / 5);
    }
}

